--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -46,9 +46,82 @@
         "\n",
         "Currently the process of identifying incomplete Zambian articles is largely manual, relying on editor intuition, quality assessments, and community discussions. This approach is time-consuming, inconsistent, and insufficient for  addressing the most critical content gaps. Without a scalable method to assess and prioritize articles, valuable editing efforts may be misdirected, leaving important topics underrepresented.\n",
         "\n",
+        "\n",
         "The core problem is the absence of an automated, consistent, and accurate system to determine and classify the completeness of Zambian Wikipedia pages. By analyzing text structure, metadata, and content coverage, such a system could classify articles according to Wikipedia’s quality scale and highlight key areas for improvement. This would enable editors to focus on the most impactful updates, improve the overall quality of Zambian content, and ensure that readers have access to well-developed, trustworthy information.\n",
         "\n",
-        "Solving this problem benefits multiple stakeholders: Wikipedia editors seeking guidance on where to contribute, WikiProject Zambia aiming to raise overall article standards, researchers and educators relying on accurate information, and the general public seeking a richer understanding of Zambia."
+        "Solving this problem benefits multiple stakeholders: Wikipedia editors seeking guidance on where to contribute, WikiProject Zambia aiming to raise overall article standards, researchers and educators relying on accurate information, and the general public seeking a richer understanding of Zambia.\n",
+        "\n",
+        "## Objectives and success criteria\n",
+        "\n",
+        "### 1.1 Primary Objectives\n",
+        "\n",
+        "We will build a classification model for:\n",
+        "\n",
+        "**Objective 1: Article Classification System**\n",
+        "Develop a system to automatically classify Zambian Wikipedia articles into established quality levels based on Wikipedia’s quality scale:  \n",
+        "- **Stub (Level 0):** <500 words, minimal structure, few/no references.  \n",
+        "- **Start (Level 1):** 500–1500 words, basic structure, some references.  \n",
+        "- **C-Class (Level 2):** >1500 words, good structure, adequate references.  \n",
+        "- **B-Class (Level 3):** Comprehensive coverage, good references, proper structure.  \n",
+        "- **Good Article (Level 4):** Meets Wikipedia’s “good article” criteria—well-written, neutral, fully referenced.  \n",
+        "- **Featured Article (Level 5):** Exemplary standard, exceptional writing, comprehensive coverage.\n",
+        "\n",
+        "**Objective 2: Content Gap Identification**  \n",
+        "Identify missing or underdeveloped elements within articles categorized as:  \n",
+        "- Structural gaps (missing sections)  \n",
+        "- Content gaps (missing topics)  \n",
+        "- Reference gaps (unreliable sources)  \n",
+        "- Multimedia gaps (missing images, maps, diagrams)\n",
+        "\n",
+        "**Objective 3: Actionable Insights Generation**  \n",
+        "Provide specific improvement recommendations, including:  \n",
+        "- Priority ranking of articles needing attention  \n",
+        "- Article-specific suggestions for enhancement  \n",
+        "- Content templates for common article types  \n",
+        "- Reference improvement strategies\n",
+        "\n",
+        "### 1.2 Secondary Objectives\n",
+        "- Create a reusable assessment framework adaptable to other countries/topics.  \n",
+        "- Establish baseline metrics to track future Wikipedia content improvements.  \n",
+        "- Produce educational resources to guide editors on quality standards.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. Success Criteria & Metrics\n",
+        "\n",
+        "### 2.1 Primary Success Metrics\n",
+        "**Metric 1: Classification Accuracy**  \n",
+        "- **Target:** ≥85% accuracy in classifying articles.  \n",
+        "- **Measurement:** Compare automated classifications against human-rated articles using cross-validation and confusion matrix analysis.\n",
+        "\n",
+        "**Metric 2: Gap Identification Accuracy**  \n",
+        "- **Target:** Correctly flag the top 20 most incomplete Zambian articles.  \n",
+        "- **Measurement:** Validate with expert review and compare with community consensus.\n",
+        "\n",
+        "### 2.2 Secondary Success Metrics\n",
+        "**Model Performance Metrics**  \n",
+        "- **Precision:** Minimize false positives (overrating article quality).  \n",
+        "- **Recall:** Minimize false negatives (underrating article quality).  \n",
+        "- **F1-Score:** Balanced metric for each quality level.  \n",
+        "- **Cohen’s Kappa:** Measure agreement between model and human raters.\n",
+        "\n",
+        "**Business Impact Metrics**  \n",
+        "- **Usability:** Wikipedia editors can easily interpret and act on recommendations.  \n",
+        "- **Efficiency:** Reduced time needed to identify priority improvement opportunities.  \n",
+        "- **Coverage:** Percentage of Zambian articles assessed by the system.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 3. Validation Methods\n",
+        "**Expert Review**  \n",
+        "- Recruit 3–5 experienced Wikipedia editors.  \n",
+        "- Have them manually assess 50 randomly selected articles.  \n",
+        "- Compare their assessments with model output to measure agreement.\n",
+        "\n",
+        "**Community Feedback**  \n",
+        "- Share results with WikiProject Zambia members.  \n",
+        "- Gather qualitative feedback on usefulness, accuracy, and priorities.  \n",
+        "- Apply feedback to refine the model and recommendations."
       ],
       "metadata": {
         "id": "8Cr2hAk_dTqy"
