[BU] Data Mining Goals - Akende

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Akende1/code-unza25-csc4792-project_team_27-repository/blob/main/code_unza25_csc4792_project_team_27_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -37,6 +21,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8Cr2hAk_dTqy"
+      },
       "source": [
         "# 1. Business Understanding\n",
         "\n",
@@ -119,11 +106,40 @@
         "**Community Feedback**  \n",
         "- Share results with WikiProject Zambia members.  \n",
         "- Gather qualitative feedback on usefulness, accuracy, and priorities.  \n",
-        "- Apply feedback to refine the model and recommendations.\n"
-      ],
-      "metadata": {
-        "id": "8Cr2hAk_dTqy"
-      }
+        "- Apply feedback to refine the model and recommendations.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 4. Data Mining Goals\n",
+        "\n",
+        "**Automated Quality Classification**\n",
+        "\n",
+        "Build a supervised classification model to automatically assign Zambian Wikipedia articles to one of six quality levels (Stub, Start, C-Class, B-Class, Good Article, Featured Article) based on Wikipedia’s quality scale.\n",
+        "\n",
+        "- Content Gap Detection\n",
+        "\n",
+        "Use text mining and metadata analysis to identify missing sections, low reference counts, insufficient word count, and lack of multimedia.\n",
+        "\n",
+        "- Improvement Recommendation Generation\n",
+        "\n",
+        "Develop a rule-based recommendation system that generates actionable suggestions for editors based on detected gaps (e.g., “Add references to support claims,” “Include an infobox,” “Expand the history section”).\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
