added the sections

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Akende1/code-unza25-csc4792-project_team_27-repository/blob/main/code_unza25_csc4792_project_team_27_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -25,7 +25,7 @@
         "id": "8Cr2hAk_dTqy"
       },
       "source": [
-        "# 1. Business Understanding\n",
+        "# 1.Business Understanding\n",
         "\n",
         "## Problem Statement\n",
         "\n",
@@ -124,13 +124,64 @@
         "\n",
         "Develop a rule-based recommendation system that generates actionable suggestions for editors based on detected gaps (e.g., “Add references to support claims,” “Include an infobox,” “Expand the history section”).\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
+        "# 2.Data Understanding"
+      ],
+      "metadata": {
+        "id": "usewYXf82Pz8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3.Data Preparation"
+      ],
+      "metadata": {
+        "id": "6M2RSPXG5oFa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4.Modeling"
+      ],
+      "metadata": {
+        "id": "-Fq7zGOQ56Cj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 5.Evaluation"
+      ],
+      "metadata": {
+        "id": "DJb7jMQS5_do"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1dtdk6sR4yVh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
