--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -141,6 +141,26 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "plt.hist(df_raw['num_images'], bins=10)\n",
+        "plt.title('Image Count Distribution')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "RWPXgI-97Uyg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tboD1JhR7xGV"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# 3.Data Preparation"
@@ -180,7 +200,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
