[DU] image count histogram added

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -143,6 +143,7 @@
     {
       "cell_type": "code",
       "source": [
+        " Image count histogram\n",
         "plt.hist(df_raw['num_images'], bins=10)\n",
         "plt.title('Image Count Distribution')\n",
         "plt.show()"
