[DP] train/test spit added

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -171,6 +171,18 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Train/test split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
+      ],
+      "metadata": {
+        "id": "lPQca5wz9utF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# 4.Modeling"
@@ -178,6 +190,15 @@
       "metadata": {
         "id": "-Fq7zGOQ56Cj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vfWIeMql-Hb6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
