[MO] confusion matrix added

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -193,7 +193,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#display confusion matrix\n",
+        "preds = rf.predict(X_test)\n",
+        "print(confusion_matrix(y_test, preds))"
+      ],
       "metadata": {
         "id": "vfWIeMql-Hb6"
       },
