[EV]  confusion matrix heatmap added

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -215,7 +215,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# confusion matrix heatmap\n",
+        "import seaborn as sns\n",
+        "cm = confusion_matrix(y, y_pred)\n",
+        "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+        "plt.title('Confusion Matrix')\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "1dtdk6sR4yVh"
       },
