--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -228,6 +228,27 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6.Deployment"
+      ],
+      "metadata": {
+        "id": "-GZ6A96sCtT_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#export predictions\n",
+        "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "PfQc-UPcC1sC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
