[DU] Load CSV dataset

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Akende1/code-unza25-csc4792-project_team_27-repository/blob/main/code_unza25_csc4792_project_team_27_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -127,6 +127,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "usewYXf82Pz8"
+      },
       "source": [
         "\n",
         "\n",
@@ -135,86 +138,94 @@
         "```\n",
         "\n",
         "# 2.Data Understanding"
-      ],
-      "metadata": {
-        "id": "usewYXf82Pz8"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RWPXgI-97Uyg"
+      },
+      "outputs": [],
       "source": [
+        "#Load CSV\n",
+        "import pandas as pd\n",
+        "df_raw = pd.read_csv('zambian_wikipedia_pages_dataset_FIXED.csv')\n",
+        "df_raw.head()\n",
+        "\n",
+        "\n",
         "#Image count histogram\n",
         "plt.hist(df_raw['num_images'], bins=10)\n",
         "plt.title('Image Count Distribution')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "RWPXgI-97Uyg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "tboD1JhR7xGV"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 3.Data Preparation"
-      ],
       "metadata": {
         "id": "6M2RSPXG5oFa"
-      }
+      },
+      "source": [
+        "# 3.Data Preparation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Train/test split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "lPQca5wz9utF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Train/test split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 4.Modeling"
-      ],
       "metadata": {
         "id": "-Fq7zGOQ56Cj"
-      }
+      },
+      "source": [
+        "# 4.Modeling"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vfWIeMql-Hb6"
+      },
+      "outputs": [],
       "source": [
         "#display confusion matrix\n",
         "preds = rf.predict(X_test)\n",
         "print(confusion_matrix(y_test, preds))"
-      ],
-      "metadata": {
-        "id": "vfWIeMql-Hb6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 5.Evaluation"
-      ],
       "metadata": {
         "id": "DJb7jMQS5_do"
-      }
+      },
+      "source": [
+        "# 5.Evaluation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1dtdk6sR4yVh"
+      },
+      "outputs": [],
       "source": [
         "# confusion matrix heatmap\n",
         "import seaborn as sns\n",
@@ -222,39 +233,34 @@
         "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
         "plt.title('Confusion Matrix')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "1dtdk6sR4yVh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 6.Deployment"
-      ],
       "metadata": {
         "id": "-GZ6A96sCtT_"
-      }
+      },
+      "source": [
+        "# 6.Deployment"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#export predictions\n",
-        "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PfQc-UPcC1sC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#export predictions\n",
+        "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
