--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -184,6 +184,23 @@
       },
       "outputs": [],
       "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "#Heuristic label function\n",
+        "def heuristic_quality_label(row):\n",
+        "    wc = row['word_count']; refs = row['references_signal']; secs = row['num_sections']\n",
+        "    if wc<500 and refs<2 and secs<=2: return 0\n",
+        "    if 500<=wc<1500 and refs>=2: return 1\n",
+        "    if wc>=1500 and refs>=5 and secs>=5: return 2\n",
+        "    if wc>=2000 and refs>=8 and secs>=6: return 3\n",
+        "    if wc>=2500 and refs>=12 and secs>=8: return 4\n",
+        "    if wc>=3000 and refs>=18 and secs>=10: return 5\n",
+        "    return 0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "#Train/test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
       ]
