[MO] Initialize Models

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -222,6 +222,18 @@
       },
       "outputs": [],
       "source": [
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score, f1_score, cohen_kappa_score, classification_report, confusion_matrix\n",
+        "\n",
+        "#Initialize models\n",
+        "models = {\n",
+        "    'LogReg': LogisticRegression(max_iter=200),\n",
+        "    'RandomForest': RandomForestClassifier(n_estimators=250, random_state=42),\n",
+        "    'GradientBoosting': GradientBoostingClassifier(random_state=42)\n",
+        "}\n",
+        "\n",
+        "\n",
         "#display confusion matrix\n",
         "preds = rf.predict(X_test)\n",
         "print(confusion_matrix(y_test, preds))"
