[EV] Select best model

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -256,6 +256,13 @@
       },
       "outputs": [],
       "source": [
+        "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+        "import numpy as np\n",
+        "\n",
+        "#Select best model\n",
+        "best_model = rf\n",
+        "\n",
+        "\n",
         "# confusion matrix heatmap\n",
         "import seaborn as sns\n",
         "cm = confusion_matrix(y, y_pred)\n",
