[DE] Save trained RandomForest model

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -288,6 +288,12 @@
       },
       "outputs": [],
       "source": [
+        "import joblib\n",
+        "\n",
+        "#Save trained RandomForest model\n",
+        "joblib.dump(best_model, 'rf_quality_classifier.joblib')\n",
+        "\n",
+        "\n",
         "#export predictions\n",
         "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
       ]
