[DU] Word count histogram

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -154,6 +154,16 @@
         "df_raw.head()\n",
         "\n",
         "\n",
+        "\n",
+        "#Word count histogram\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.hist(df_raw['word_count'], bins=20)\n",
+        "plt.title('Word Count Distribution')\n",
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "#Image count histogram\n",
         "plt.hist(df_raw['num_images'], bins=10)\n",
         "plt.title('Image Count Distribution')\n",
