[DP] Features and scaling

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -211,6 +211,17 @@
         "\n",
         "\n",
         "\n",
+        "#Features & scaling\n",
+        "feature_cols = ['word_count','num_sections','num_internal_links','num_images','num_external_links','category_count','has_infobox','references_signal']\n",
+        "X = df_raw[feature_cols]\n",
+        "y = df_raw['quality_label']\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = X.copy()\n",
+        "X_scaled[feature_cols] = scaler.fit_transform(X[feature_cols])\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "#Train/test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
       ]
