[MO] Features importance for RandomForest

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -255,6 +255,18 @@
         "}\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "#Feature importance for RandomForest\n",
+        "rf = models['RandomForest']\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "feat_imp = pd.Series(rf.feature_importances_, index=feature_cols).sort_values(ascending=False)\n",
+        "feat_imp.plot(kind='bar', title='RandomForest Feature Importance')\n",
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "\n",
         "#display confusion matrix\n",
         "preds = rf.predict(X_test)\n",
         "print(confusion_matrix(y_test, preds))"
