[EV] Identify top misclassified articles

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -296,6 +296,12 @@
         "best_model = rf\n",
         "\n",
         "\n",
+        "#Identify top misclassified articles\n",
+        "y_pred = best_model.predict(X_scaled)\n",
+        "misclassified = df_raw[y_pred != y]\n",
+        "misclassified[['title','quality_label']].head(10)\n",
+        "\n",
+        "\n",
         "# confusion matrix heatmap\n",
         "import seaborn as sns\n",
         "cm = confusion_matrix(y, y_pred)\n",
