[DE] Run inference on ful dataset

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -333,6 +333,10 @@
         "joblib.dump(best_model, 'rf_quality_classifier.joblib')\n",
         "\n",
         "\n",
+        "#Run inference on full dataset\n",
+        "df_raw['predicted_quality'] = best_model.predict(X_scaled)\n",
+        "\n",
+        "\n",
         "#export predictions\n",
         "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
       ]
