--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Akende1/code-unza25-csc4792-project_team_27-repository/blob/main/code_unza25_csc4792_project_team_27_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -154,6 +154,9 @@
         "df_raw.head()\n",
         "\n",
         "\n",
+        "#Basic stats\n",
+        "df_raw.describe(include='all')\n",
+        "\n",
         "\n",
         "#Word count histogram\n",
         "import matplotlib.pyplot as plt\n",
@@ -209,6 +212,8 @@
         "    return 0\n",
         "\n",
         "\n",
+        "#Apply labels\n",
+        "df_raw['quality_label'] = df_raw.apply(heuristic_quality_label, axis=1)\n",
         "\n",
         "\n",
         "#Features & scaling\n",
@@ -255,6 +260,17 @@
         "}\n",
         "\n",
         "\n",
+        "#Train & evaluate\n",
+        "results = {}\n",
+        "for name, model in models.items():\n",
+        "  model.fit(X_train, y_train)\n",
+        "  preds = model.predict(X_test)\n",
+        "  results[name] = {\n",
+        "      'accuracy': accuracy_score(y_test, preds),\n",
+        "      'f1_weighted': f1_score(y_test, preds, average='weighted'),\n",
+        "      'kappa': cohen_kappa_score(y_test, preds)\n",
+        "  }\n",
+        "  print(name, results[name])\n",
         "\n",
         "\n",
         "#Feature importance for RandomForest\n",
@@ -295,6 +311,11 @@
         "#Select best model\n",
         "best_model = rf\n",
         "\n",
+        "#5-fold CV\n",
+        "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+        "cv_scores = cross_val_score(best_model, X_scaled, y, cv=cv, scoring='f1_weighted')\n",
+        "print('5-Fold CV F1-weighted:', cv_scores)\n",
+        "print('Mean CV score:', np.mean(cv_scores))\n",
         "\n",
         "#Identify top misclassified articles\n",
         "y_pred = best_model.predict(X_scaled)\n",
@@ -332,6 +353,8 @@
         "#Save trained RandomForest model\n",
         "joblib.dump(best_model, 'rf_quality_classifier.joblib')\n",
         "\n",
+        "#Save scaler\n",
+        "joblib.dump(scaler, 'feature_scaler.joblib')\n",
         "\n",
         "#Run inference on full dataset\n",
         "df_raw['predicted_quality'] = best_model.predict(X_scaled)\n",
@@ -344,8 +367,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
