Added data summaries, class distribution, classification report, insights, and deployment notes

--- a/code_unza25_csc4792_project_team_27_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_27_notebook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Akende1/code-unza25-csc4792-project_team_27-repository/blob/main/code_unza25_csc4792_project_team_27_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -170,7 +170,17 @@
         "#Image count histogram\n",
         "plt.hist(df_raw['num_images'], bins=10)\n",
         "plt.title('Image Count Distribution')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "# Summary of internal links, references, sections\n",
+        "print(\"\\nKey Features Summary:\")\n",
+        "summary_stats = df_raw[['num_sections','num_internal_links','references_signal']].describe()\n",
+        "print(summary_stats)\n",
+        "\n",
+        "print(\"\\nCorrelation between structural features:\")\n",
+        "correlation_matrix = df_raw[['num_sections','num_internal_links','references_signal','word_count']].corr()\n",
+        "print(correlation_matrix)"
       ]
     },
     {
@@ -228,7 +238,16 @@
         "\n",
         "\n",
         "#Train/test split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)"
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)\n",
+        "\n",
+        "\n",
+        "# Check class distribution\n",
+        "print(\"\\nClass Distribution Analysis:\")\n",
+        "class_distribution = y_train.value_counts().sort_index()\n",
+        "print(\"Training set class distribution:\")\n",
+        "print(class_distribution)\n",
+        "\n",
+        "print(f\"\\nClass balance ratio (min/max): {class_distribution.min()/class_distribution.max():.3f}\")"
       ]
     },
     {
@@ -285,7 +304,14 @@
         "\n",
         "#display confusion matrix\n",
         "preds = rf.predict(X_test)\n",
-        "print(confusion_matrix(y_test, preds))"
+        "print(confusion_matrix(y_test, preds))\n",
+        "\n",
+        "\n",
+        "# Classification report\n",
+        "print(\"\\nDetailed Classification Report:\")\n",
+        "quality_labels = ['Stub', 'Start', 'C-class', 'B-class', 'A-class', 'Featured']\n",
+        "print(\"RandomForest Classification Report:\")\n",
+        "print(classification_report(y_test, preds, target_names=quality_labels))"
       ]
     },
     {
@@ -328,7 +354,15 @@
         "cm = confusion_matrix(y, y_pred)\n",
         "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
         "plt.title('Confusion Matrix')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "# Insights & observations\n",
+        "print(\"\\nKey Insights & Observations:\")\n",
+        "print(\"- Articles with very low word count + no references are frequently misclassified\")\n",
+        "print(\"- Feature importance analysis reveals content structure is key predictor\")\n",
+        "print(f\"- Overall model accuracy: {accuracy_score(y, y_pred):.4f}\")\n",
+        "print(f\"- Success criteria met (≥85%): {accuracy_score(y, y_pred) >= 0.85}\")"
       ]
     },
     {
@@ -361,14 +395,21 @@
         "\n",
         "\n",
         "#export predictions\n",
-        "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)"
+        "df_raw.to_csv('zambian_wikipedia_pages_predictions.csv', index=False)\n",
+        "\n",
+        "\n",
+        "# Notes for deployment\n",
+        "print(\"\\nDeployment Notes:\")\n",
+        "print(\"Model + scaler can be loaded in production to classify new articles automatically\")\n",
+        "print(\"Required files: rf_quality_classifier.joblib, feature_scaler.joblib\")\n",
+        "print(\"Features needed:\", feature_cols)"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
